force-app/main/default/objects/C__mdt/C__mdt.object-meta.xml
<CustomObject>
    <label>Cost Per Item</label>
    <pluralLabel>Cost Per Items</pluralLabel>
</CustomObject>