force-app/main/default/objects/C__mdt/fields/Liv_Din_Room_cost__c.field-meta.xml
<CustomField>
    <fullName>Liv_Din_Room_cost__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Liv/Din Room cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>