force-app/main/default/objects/C__mdt/fields/Loft_cost__c.field-meta.xml
<CustomField>
    <fullName>Loft_cost__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Loft cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>