force-app/main/default/objects/C__mdt/fields/Office_cost__c.field-meta.xml
<CustomField>
    <fullName>Office_cost__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Office cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>