force-app/main/default/objects/C__mdt/fields/Rec_Room_Great_Room_cost__c.field-meta.xml
<CustomField>
    <fullName>Rec_Room_Great_Room_cost__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Rec Room/Great Room cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>