force-app/main/default/objects/C__mdt/fields/Rugs_3x5_cost__c.field-meta.xml
<CustomField>
    <fullName>Rugs_3x5_cost__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Rugs 3x5 cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>