force-app/main/default/objects/C__mdt/fields/Rugs_5X7_cost__c.field-meta.xml
<CustomField>
    <fullName>Rugs_5X7_cost__c</fullName>
    <defaultValue>35</defaultValue>
    <label>Rugs 5X7 cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>