force-app/main/default/objects/C__mdt/fields/Rugs_8X10_cost__c.field-meta.xml
<CustomField>
    <fullName>Rugs_8X10_cost__c</fullName>
    <defaultValue>45</defaultValue>
    <label>Rugs 8X10 cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>