force-app/main/default/objects/C__mdt/fields/X1_Flight_Stair_cost__c.field-meta.xml
<CustomField>
    <fullName>X1_Flight_Stair_cost__c</fullName>
    <defaultValue>50</defaultValue>
    <label>1 Flight Stair cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>