force-app/main/default/objects/C__mdt/fields/X1_Walk_in_Closet__c.field-meta.xml
<CustomField>
    <fullName>X1_Walk_in_Closet__c</fullName>
    <defaultValue>15</defaultValue>
    <label>1 Walk in Closet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>