force-app/main/default/objects/C__mdt/fields/X2_BD_Cost__c.field-meta.xml
<CustomField>
    <fullName>X2_BD_Cost__c</fullName>
    <defaultValue>110</defaultValue>
    <label>2 BD Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>