force-app/main/default/objects/C__mdt/fields/X2_Hall_cost__c.field-meta.xml
<CustomField>
    <fullName>X2_Hall_cost__c</fullName>
    <defaultValue>60</defaultValue>
    <label>2 Hall cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>