force-app/main/default/objects/C__mdt/fields/X2_MBD_cost__c.field-meta.xml
<CustomField>
    <fullName>X2_MBD_cost__c</fullName>
    <defaultValue>120</defaultValue>
    <label>2 MBD cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>