force-app/main/default/objects/C__mdt/fields/X2_Walk_in_Closet__c.field-meta.xml
<CustomField>
    <fullName>X2_Walk_in_Closet__c</fullName>
    <defaultValue>30</defaultValue>
    <label>2 Walk in Closet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>