force-app/main/default/objects/C__mdt/fields/X3_Hall_cost__c.field-meta.xml
<CustomField>
    <fullName>X3_Hall_cost__c</fullName>
    <defaultValue>90</defaultValue>
    <label>3 Hall cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>