force-app/main/default/objects/C__mdt/fields/X3_Living_Room_cost__c.field-meta.xml
<CustomField>
    <fullName>X3_Living_Room_cost__c</fullName>
    <defaultValue>315</defaultValue>
    <label>3 Living Room cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>