force-app/main/default/objects/C__mdt/fields/X3_Walk_in_Closet__c.field-meta.xml
<CustomField>
    <fullName>X3_Walk_in_Closet__c</fullName>
    <defaultValue>45</defaultValue>
    <label>3 Walk in Closet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>