force-app/main/default/objects/C__mdt/fields/X3BD_Apt_Condo_cost__c.field-meta.xml
<CustomField>
    <fullName>X3BD_Apt_Condo_cost__c</fullName>
    <defaultValue>230</defaultValue>
    <label>3BD Apt/Condo cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>